# rig-arxiv-agent-example

./: Cargo.toml
shuttle/: Cargo.toml  README.md  Secrets.toml.example
shuttle/src/: main.rs  tools.rs
shuttle/static/: index.html
src/: main.rs
