[package]
name = "rig-arxiv-agent-example"
version = "0.1.0"
edition = "2021"

[dependencies]
rig-core = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = "0.11"
anyhow = "1.0"
thiserror = "1.0"
quick-xml = { version = "0.31", features = ["serialize"] }
urlencoding = "2.1"
tracing = "0.1"